crates/fluvio-connector-derive/tests/ui/not_async.rs
use fluvio_connector_common::connector;

#[connector(source)]
fn start_fn() {}
